# gx

./: Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: release.yml
docs/: README.md  commands.md  configuration.md  getting-started.md  onboarding.md  pull-requests.md  review.md  shell-integration.md  skills.md  workspaces.md
skills/gx-onboarding-workflow/: SKILL.md
skills/gx-workspace-workflow/: SKILL.md
src/: ai.rs  args.rs  browser.rs  clipboard.rs  config.rs  main.rs  output.rs  repo_config.rs  repo_setup.rs
src/commands/: add.rs  checkout.rs  commit.rs  external.rs  log.rs  mod.rs  onboarding.rs  pr.rs  push.rs  review.rs  setup.rs  stash.rs  status.rs  workspace.rs  workspace_clean.rs
src/commands/workspace/: create.rs  lifecycle.rs  mod.rs  navigate.rs
src/git/: branch.rs  commit.rs  fetch.rs  gh.rs  git_exec.rs  github.rs  log.rs  mod.rs  pr_actions.rs  pr_search.rs  pull_request.rs  push.rs  reviewers.rs  staging.rs  stash.rs  status.rs  time.rs  worktree.rs
src/git/review/: blob.rs  diff.rs  mod.rs  range.rs  state.rs
src/git/worktree/: cleanup.rs  mod.rs  model.rs  ops.rs  staged.rs  summary.rs
src/ui/: branch_picker.rs  clean_picker.rs  confirm.rs  file_picker.rs  log_viewer.rs  mod.rs  pr_picker.rs  setup_file_picker.rs  stash_picker.rs  status.rs  terminal.rs  workspace_picker.rs
src/ui/review/: color.rs  diff_view.rs  file_tree.rs  highlight.rs  mod.rs
tests/: workspace_new.rs
