[package]
name = "gx"
description = "GX is a smart git CLI"
homepage = "https://github.com/reckerp/gx"
version = "0.4.0"
edition = "2024"
repository = "https://github.com/reckerp/gx"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
clap_complete = "4.5"
miette = { version = "7.1", features = ["fancy"] }
thiserror = "2.0.17"
git2 = "0.20.3"
fuzzy-matcher = "0.3.7"
ratatui = "0.30"
crossterm = "0.29"
confy = { version = "2.0.0", features = ["toml_conf"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
# `inline` enables iter_inline_changes for word-level intra-line diffs; it only
# pulls the already-default `text` feature, adding no transitive deps.
similar = { version = "3.1", features = ["inline"] }
# default-features off + default-fancy => pure-Rust fancy-regex backend (no onig
# C dependency), keeping `cargo install`/Homebrew builds toolchain-free.
syntect = { version = "5.3", default-features = false, features = ["default-fancy"] }
# Detects the terminal's background brightness (via OSC 11) so the diff view can
# pick a light or dark theme + palette. Uses our crossterm 0.29 (no duplicate).
terminal-light = "1.8"

[dev-dependencies]
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
